--- a/blog_app_front/src/pages/register/register.css
+++ b/blog_app_front/src/pages/register/register.css
@@ -10,6 +10,7 @@
 
 .registerTitle{
     font-size: 50px;
+    color: teal;
 }
 
 .registerForm{
@@ -23,9 +24,12 @@
 }
 
 .registerInput{
+    width: 250px;
     padding: 10px;
     background-color: white;
     border: none;
+    outline-color: teal;
+    border-radius: 5px;
 }
 
 .registerButton{
